[package]
name = "yaws-tls-blueprint"
version = "0.0.1"
edition = "2021"
description = "yaws TLS blueprint"
homepage = "https://github.com/yaws-rs/tls"
keywords = ["io", "uring", "epoll", "async"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/tls"
categories = ["science"]

[dependencies]
blueprint = { path = "../../blueprint" }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1.12", default-features = false }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["rustls/std", "rustls-rustcrypto/std"]

[package.metadata.docs.rs]
features = []

